<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bajins.tools</groupId>
    <artifactId>tools-javafx</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>tools-javafx</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.12.1</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>21.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>21.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>21.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>21.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.dlsc.formsfx</groupId>
            <artifactId>formsfx-core</artifactId>
            <version>11.6.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.synedra</groupId>
            <artifactId>validatorfx</artifactId>
            <version>0.6.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.bootstrapfx</groupId>
            <artifactId>bootstrapfx-core</artifactId>
            <version>0.4.0</version>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/org.apache.poi/poi -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>5.5.1</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.5.1</version>
            <scope>compile</scope>
        </dependency>

        <!-- https://gitee.com/chinabugotech/hutool -->
        <!-- https://github.com/chinabugotech/hutool -->
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>5.8.43</version>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/org.postgresql/postgresql -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.8</version>
            <scope>compile</scope>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/io.arxila.javatuples/javatuples -->
        <!--<dependency>
            <groupId>io.arxila.javatuples</groupId>
            <artifactId>javatuples</artifactId>
            <version>2.0.1</version>
            <scope>compile</scope>
        </dependency>-->
        <!-- Source: https://mvnrepository.com/artifact/io.vavr/vavr -->
        <!--<dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>0.11.0</version>
            <scope>compile</scope>
        </dependency>-->
        <!-- Source: https://mvnrepository.com/artifact/com.solubris/typedtuples -->
        <dependency>
            <groupId>com.solubris</groupId>
            <artifactId>typedtuples</artifactId>
            <version>2.1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <compilerArgs>
                        <arg>--add-opens</arg>
                        <arg>javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</arg>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/javafx.scene=org.controlsfx.controls</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/javafx.scene=org.controlsfx.controls</arg>
                        <!-- 解决 JavaFX Graphics 的 Native Access 警告 -->
                        <!--<arg>&#45;&#45;enable-native-access=javafx.graphics</arg>-->
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- For running tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--add-opens javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</argLine>
                    <argLine>--add-exports javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</argLine>
                    <argLine>--add-opens javafx.graphics/javafx.scene=org.controlsfx.controls</argLine>
                    <argLine>--add-exports javafx.graphics/javafx.scene=org.controlsfx.controls</argLine>
                    <!-- 解决 JavaFX Graphics 的 Native Access 警告 -->
                    <argLine>--enable-native-access=javafx.graphics</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>com.bajins.tools.toolsjavafx/com.bajins.tools.toolsjavafx.ToolsjavafxApplication</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                            <options>
                                <!-- 解决 JavaFX Graphics 的 Native Access 警告 -->
                                <option>--enable-native-access=javafx.graphics</option>
                                <!-- 从 Java 9 开始，JavaFX 将其内部实现（如 skin 包）进行了封装。-->
                                <!-- ControlsFX 的 TableFilter 功能需要通过反射访问 TableView 的私有内部组件 TableHeaderRow 来插入筛选按钮 -->
                                <!-- ，但 JavaFX 默认不允许外部模块访问这些受保护的内部 API -->
                                <option>--add-opens</option>
                                <option>javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
                                <option>--add-exports</option>
                                <option>javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
                                <option>--add-opens</option>
                                <option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
                                <option>--add-exports</option>
                                <option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
                                <!-- ControlsFX 作为非模块化 jar 运行 -->
                                <!--<option>&#45;&#45;add-opens</option>
                                <option>javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
                                <option>&#45;&#45;add-opens</option>
                                <option>javafx.graphics/javafx.scene=ALL-UNNAMED</option>-->
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>